k3s/kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-api
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: app-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
